-- The name of the package.
name:                brian

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.0

-- A short (one-line) description of the package.
synopsis:            a life with Brian

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:         -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:     Brian
                     , Brian.BTag
                     , Brian.Medium

  -- modules included in this library but not exported.
  other-modules:

  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , ImportQualifiedPost
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedLists
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RecordWildCards
                    , PartialTypeSignatures
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , UnicodeSyntax
                    , ViewPatterns
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base, containers, data-textual, HTTP, lens
                     , logging-effect, mtl, neat-interpolation
                     , optparse-applicative, parsers, safe-exceptions
                     , sqlite-simple, tagsoup, text, text-printer, word-wrap

                     , base1         >= 0.0.10.0
                     , fpath         >= 1.3.5.0
                     , log-plus      >= 0.0.4.4
                     , mockio-log    >= 0.1.3.0
                     , monaderror-io >= 1.2.6.0
                     , monadio-plus  >= 2.5.3.0
                     , more-unicode  >= 0.0.19.0
                     , natural       >= 0.0.5.0
                     , stdmain       >= 1.6.3.0
                     , textual-plus  >= 1.1.4.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------
