-- The name of the package.
name:                brian

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.0

-- A short (one-line) description of the package.
synopsis:            a life with Brian

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:         -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:     Brian

  -- modules included in this library but not exported.
  other-modules:       Brian.Actress
                     , Brian.BTag
                     , Brian.Description
                     , Brian.Entry
                     , Brian.EntryData
                     , Brian.EntryFilter
                     , Brian.Exceptions
                     , Brian.ID
                     , Brian.Medium
                     , Brian.NumberParsing
                     , Brian.Options
                     , Brian.Parsers
                     , Brian.SQLite
                     , Brian.SQLiteError
                     , Brian.TagSoup
                     , Brian.Title

  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , ImportQualifiedPost
                    , LambdaCase
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RecordWildCards
                    , PartialTypeSignatures
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , UnicodeSyntax
                    , ViewPatterns
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base, containers, data-textual, HTTP, lens
                     , logging-effect, mtl, optparse-applicative, parsers
                     , regex, regex-with-pcre, safe-exceptions, split
                     , sqlite-simple, tagsoup, tasty-hunit, text, text-printer
                     , trifecta, word-wrap

                     , base1t        >= 0.0.6.0
                     , fpath         >= 1.3.5.0
                     , log-plus      >= 0.0.4.4
                     , mockio-log    >= 0.1.3.0
                     , monaderror-io >= 1.2.6.0
                     , monadio-plus  >= 2.5.3.0
                     , natural       >= 0.0.5.0
                     , optparse-plus >= 1.3.4.0
                     , parser-plus   >= 1.0.7.29
                     , pcre          >= 0.0.5.0
                     , stdmain       >= 1.6.3.0
                     , tasty-plus    >= 1.5.2.24
                     , textual-plus  >= 1.1.4.0
                     , trifecta-plus >= 0.0.1.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------
